--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,10 @@ header{
     /*border-radius: 100px;*/
 }
 
+#back-button{
+    color:black;
+}
+
 .content-text{
     display: flex;
     flex-direction: column;
@@ -116,6 +120,7 @@ ul{
     display: flex;
     align-content: center;
     font-size: 16px;
+    border-radius: 10px;
 }
 
 #list-tasks{
@@ -123,6 +128,11 @@ ul{
     display: block;
     align-content: center;
     font-size: 16px;
+}
+
+.list-group-item{
+    background-color: transparent;
+    border-style: none;
 }
 
 .footer-ul{
